@@ -1,3 +1,7 @@
+2011-03-09  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amadmin.c: export quote host and disk name, import parse
+	  quoted host and disk name.
+
 2011-03-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amtrmidx.c: Fix memory leak.
 
